--- a/src/index.css
+++ b/src/index.css
@@ -947,3 +947,12 @@ a {
     background-color: #374151;
     color: #9ca3af;
 }
+
+/* Search Highlight */
+.highlight-text {
+  background-color: #fef08a;
+  color: #854d0e;
+  padding: 0 0.125rem;
+  border-radius: 0.125rem;
+  font-weight: 500;
+}
